src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--branding-secondary: #3d3938;
	--highlight: #3a48b4;

	--dark: #313131;
	--dark_secondary: rgb(43, 43, 43);
	--dark_accent: rgb(26, 26, 26);
	--dark_link_hover: rgb(164, 164, 164);

	--light: #dadada;
	--light_secondary: #e2dddd;
	--light_accent: #e8e8e8;
	--light_link_hover: rgb(157, 157, 157);

	--text: var(--dark);
	--text-inverse: var(--light);

	--bg-primary: var(--light_secondary);

	--primary: var(--light);
	--secondary: var(--light_secondary);
	--accent: var(--light_accent);
	--link_hover: var(--light_link_hover);
}

.dark-theme {
	--text: var(--light);
	--text-inverse: var(--dark);
	--bg-primary: var(--dark_secondary);

	--primary: var(--dark);
	--secondary: var(--dark_secondary);
	--accent: var(--dark_accent);
	--link_hover: var(--dark_link_hover);
}

/* Mobile Only */
@media screen and (max-width: 768px) {
	#pageWrapper {
		margin: 5%;
		overflow-wrap: anywhere;
	}
	.desktop-only {
		display: none;
	}
}

/* Desktop only */
@media screen and (min-width: 768px) {
	#pageWrapper {
		margin: 3%;
		overflow-wrap: anywhere;
	}
	.mobile-only {
		display: none;
	}
}
p,
h1,
h2,
h3,
h4,
h5,
i,
b,
a {
	color: var(--text);
}

a {
	text-decoration-line: underline;
}

a.no-style {
	text-decoration: none;
}

h1 {
	font-size: xx-large;
}

h2 {
	font-size: x-large;
}

h3 {
	font-size: large;
}

body {
	background-color: var(--bg-primary);
}

#navbar {
	display: flex;
	background-color: var(--branding-secondary);
}

#navbar__hamburger {
	background-color: transparent;
	border: none;
	cursor: pointer;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	justify-self: end;
	width: 30px;
	height: 3rem;
	padding-top: 12px;
	padding-bottom: 12px;
	margin-right: 12px;
	justify-content: center;
}

.navbar__hamburger__bar {
	color: var(--light);
	background-color: var(--light);
	height: 3px;
	width: 100%;
	transition: background-color 0.3s ease-in-out;
}

div.navbar__links {
	z-index: 1;
	flex-direction: column;
	background-color: var(--branding-secondary);
}

nav > div.navbar__links {
	height: fit-content;
	width: 100%;
	justify-content: flex-end;
	display: flex;
	padding-right: 1rem;
}

button.button {
	background-color: var(--accent);
	color: var(--text);
	padding: 1rem;
	border-radius: 10px;
}

.navbar__button {
	height: 100%;
	padding-left: 1rem;
	padding-right: 1rem;
	color: var(--light);
	background-color: var(--branding-secondary);
}

.navbar__button:hover {
	background-color: var(--dark);
	color: var(--light);
}

.navbar__button > button {
	width: 100%;
	height: 100%;
}

#navbar__branding__link {
	margin: 10px;
	display: inline-flex;
	width: min-content;
	text-decoration-line: none;
}

#navbar__branding__link > button {
	color: var(--light);
	margin-left: 5px;
	margin-right: 20px;
	padding-right: 20px;
}

div.columns {
	display: flex;
	flex-wrap: wrap;
}

div.column {
	flex: 1;
	padding: 10px;
	box-sizing: border-box;
	min-width: max-content;
}

@media (max-width: 768px) {
	div.columns:not(.mobile) {
		flex-direction: column;
	}
}

.card {
	background-color: var(--accent);
	padding: 2em;
	border-radius: 10px;
	height: 100%;
	display: inline-block;
	width: 100%;
}

select {
	color: var(--text);
	background-color: var(--primary);
	width: 100%;
	height: 50px;
	margin-top: 1em;
	margin-bottom: 1em;
	padding-left: 1em;
	margin-right: 1em;
	border-radius: 10px;
	/* Remove the default arrow */
	appearance: none;
}

select:hover,
select:hover::after {
	cursor: pointer;
	background-color: var(--link_hover);
}

label {
	color: var(--text);
}

label:hover {
	cursor: pointer;
}

button.toggle {
	background-color: var(--accent);
	border-radius: 10px;
}
button.toggle:hover {
	background-color: var(--link_hover);
}

.clickable:hover {
	cursor: pointer;
	background-color: var(--link_hover);
}

img.icon {
	margin: 0;
	padding: 0;
	display: inline;
	height: 50px;
}

#backToTop {
	position: fixed;
	bottom: 20px;
	right: 20px;
	background-color: var(--highlight);
	color: var(--light);
	padding: 10px 15px;
	border: none;
	border-radius: 5px;
	cursor: pointer;
	z-index: 1000;
	font-size: 16px;
}

div.column.centered {
	display: flex;
	justify-content: center;
}

.success {
	background-color: #426e21;
	color: var(--light);
	border-radius: 5px;
	display: flex;
	justify-content: center;
	padding: 15px;
	width: 100%;
}

.success > button {
	width: 100%;
}

img.sprite {
	width: 15vw;
	max-width: 96px;
}

